fix: scrollbar custom

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,19 @@ body {
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  width: 6px;               /* width of the entire scrollbar */
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;        /* color of the tracking area */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #3f8ecf;    /* color of the scroll thumb */
+  border-radius: 6px;       /* roundness of the scroll thumb */
+}
+
 ul, li {
   text-decoration: none;
   list-style: none;
